[gd_scene load_steps=6 format=3 uid="uid://cr033xfitjxke"]

[ext_resource type="Script" uid="uid://d1q1t2rpauws" path="res://scripts/main.gd" id="1_rvslj"]
[ext_resource type="PackedScene" uid="uid://dp3dw0sku56tp" path="res://scenes/levels/Level_01.tscn" id="2_0bbpv"]
[ext_resource type="AudioStream" uid="uid://d2sner1uu0rk4" path="res://assets/audio/woosh.mp3" id="3_0bbpv"]
[ext_resource type="PackedScene" path="res://scenes/ui/UIRoot.tscn" id="4_uiroot"]
[ext_resource type="PackedScene" path="res://scenes/ui/LoreUI.tscn" id="5_loreui"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rvslj")
first_level = ExtResource("2_0bbpv")

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="TransitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.058420584, 0.0584206, 0.058420606, 1)

[node name="FlashRect" type="ColorRect" parent="TransitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.6)

[node name="TitleLabel" type="Label" parent="TransitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="TransitionLayer"]
stream = ExtResource("3_0bbpv")
volume_db = -8.0

[node name="SubtitleLabel" type="Label" parent="TransitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UIRoot" parent="." instance=ExtResource("4_uiroot")]

[node name="LoreUI" parent="." instance=ExtResource("5_loreui")]
